fix(navigation): vertical navigation doesn't fully collapse

--- a/src/app/navigation/main-nav/main-nav.component.less
+++ b/src/app/navigation/main-nav/main-nav.component.less
@@ -14,6 +14,7 @@
     padding-right: 0;
   
     div[ng-view] {
+      height: 100%;
       padding-left: @pf-padding;
       padding-right: @pf-padding;
     }
